--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <main id="cardContainer"></main>
     </div>
-    <footer>Crafted with 💜 by <a href="https://reyes.cool">reyes</a>.</footer>
+    <footer>Made by <a href="https://www.errcode404.tk">Error404</a>.</footer>
     <script src="./app.js"></script>
   </body>
 </html>
